--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
         </section>
 
         <section id="about">
-            <div class="container py-5">
+            <div class="container py-5 px-4">
+                <div class="row text-center mb-5">
+                    <h2 class="section-title text-uppercase text-dark">about me</h2>
+                </div>
                 <div class="card shadow border-0" data-aos="fade-up" data-aos-duration="800"
                     data-aos-easing="ease-in-out">
                     <div class="row g-0">
@@ -119,8 +122,11 @@
 
         <seection id="skills" class="bg-black">
             <div class="container py-5">
+                <div class="row text-center mb-5">
+                    <h2 class="section-title text-uppercase">My skills</h2>
+                </div>
                 <div class="row d-flex g-5 justify-content-center text-center">
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-4 px-5">
                         <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
                             <img src="/img/logo-html5.png" class="card-img-top mx-auto my-3"
                                 alt="pomarańczowe logo html5">
@@ -135,7 +141,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-4 px-5">
                         <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
                             <img src="/img/logo-css3.png" class="card-img-top mx-auto my-3" alt="niebieskie logo css3">
                             <div class="card-body d-flex justify-content-center">
@@ -151,7 +157,7 @@
                     </div>
                 </div>
                 <div class="row d-flex g-5 mt-1 justify-content-center text-center">
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-4 px-5">
                         <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
                             <img src="/img/logo-java.png" class="card-img-top mx-auto my-3" alt="białe logo JAVA">
                             <div class="card-body d-flex justify-content-center">
@@ -164,12 +170,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-4 px-5">
                         <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
                             <img src="/img/logo-js.png" class="card-img-top mx-auto my-3"
                                 alt="żółte logo javascript"></img>
                             <div class="card-body d-flex justify-content-center">
-                                <h5 class="fs-3 card-title mb-3">Java Script</h5>
+                                <h5 class="fs-3 card-title mb-3">JavaScript</h5>
                                 <div class="card-body-content">
                                     <p class="text-muted px-3 pt-4"><small>JavaScript, often abbreviated as JS, is a
                                             programming language that is one of the core technologies of the World Wide
@@ -182,20 +188,20 @@
             </div>
         </seection>
 
-        <section class="py-5 px-1 bg-dark" id="portfolio">
-            <div class="container rounded-3 bg-black" data-aos="fade-up" data-aos-duration="800">
+        <section class="py-5 px-4 bg-dark" id="portfolio">
+            <div class="row text-center pb-5">
+                <h2 class="section-title text-uppercase">My projects </h2>
+            </div>
+            <div class="container rounded-3 bg-black py-5">
                 <div class="row">
                     <div class="col-12 col-lg-5 order-2 order-lg-1 py-5 px-3">
                         <div class="hero-img">
                             <div class="hero-shadow"></div>
                         </div>
                     </div>
-                    <div class="col order-1 order-lg-2 py-3 p-lg-5 px-4">
-                        <div class="row mb-5">
-                            <h3 class="text-uppercase fw-bold">My projects:
-                            </h3>
-                        </div>
-                        <div class="row border-bottom border-dark border-2 mb-5">
+                    <div class="col order-1 order-lg-2 py-3 p-lg-5 px-4" data-aos="fade-up" data-aos-duration="800">
+                        <div class="row border-bottom border-dark border-2 mb-5" data-aos="fade-up"
+                            data-aos-duration="800">
                             <div class="col-2"><span class="fs-3">01</span></div>
                             <div class="col-10">
                                 <p class="text-muted"><small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -208,7 +214,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row border-bottom border-dark border-2 mb-5">
+                        <div class="row border-bottom border-dark border-2 mb-5" data-aos="fade-up"
+                            data-aos-duration="800">
                             <div class="col-2"><span class="fs-3">02</span></div>
                             <div class="col-10">
                                 <p class="text-muted"><small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -221,7 +228,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row" data-aos="fade-up" data-aos-duration="800">
                             <div class="col-2"><span class="fs-3">03</span></div>
                             <div class="col-10">
                                 <p class="text-muted"><small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
