--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -244,23 +247,57 @@
                     </div>
                 </div>
 
+                <div class="row p-5">
+                    <h4 class="text-uppercase py-5">Trusted partners:</h4>
+                    <div class="card-carousel">
+                        <div class="card me-3">
+                            <p class="m-0">This is card text</p>
+                        </div>
+                        <div class="card me-3">
+                            <p class="m-0">This is card text</p>
+                        </div>
+                        <div class="card me-3">
+                            <p class="m-0">This is card text</p>
+                        </div>
+                        <div class="card me-3">
+                            <p class="m-0">This is card text</p>
+                        </div>
+                        <div class="card me-3">
+                            <p class="m-0">This is card text</p>
+                        </div>
+                        <div class="card me-3">
+                            <p class="m-0">This is card text</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
     </main>
 
     <footer>
-        <div class="container">
-            <p>&copy;Copyright, All rights reserved.</p>
+        <div class="container text-center py-3">
+            <div class="d-flex justify-content-center fs-4 py-3 social-media">
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+            <p class="m-0 pb-3">&copy;Copyright, All rights reserved.</p>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <script src="./js/main.js"></script>
     <script src="./js/aos.js"></script>
+    <script src="./js/slick.js"></script>
 </body>
 
 </html>
