--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>KT_DEV Portfolio Website</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -191,7 +191,7 @@
             </div>
         </seection>
 
-        <section class="py-5 px-4 bg-dark" id="portfolio">
+        <section class="py-5 px-3 bg-dark" id="portfolio">
             <div class="row text-center pb-5">
                 <h2 class="section-title text-uppercase">My projects </h2>
             </div>
@@ -247,9 +247,9 @@
                     </div>
                 </div>
 
-                <div class="row p-5">
-                    <h4 class="text-uppercase py-5">Trusted partners:</h4>
-                    <div class="card-carousel">
+                <div class="row">
+                    <h4 class="text-uppercase py-5 px-4 ">Trusted partners:</h4>
+                    <div class="card-carousel ps-4">
                         <div class="card me-3">
                             <p class="m-0">This is card text</p>
                         </div>
