--- a/index.html
+++ b/index.html
@@ -250,23 +250,33 @@
                 <div class="row">
                     <h4 class="text-uppercase py-5 px-4 ">Trusted partners:</h4>
                     <div class="card-carousel ps-4">
-                        <div class="card me-3">
-                            <p class="m-0">This is card text</p>
+                        <div class="card me-3 border-white">
+                            <i class="fa-brands fa-wordpress display-1 pb-5"></i>
+                            <h6 class="m-0 text-uppercase text-muted fw-bold">wordpress</h6>
                         </div>
-                        <div class="card me-3">
-                            <p class="m-0">This is card text</p>
+                        <div class="card me-3 border-white">
+                            <i class="fa-brands fa-slack display-1 pb-5"></i>
+                            <h6 class="m-0 text-uppercase text-muted fw-bold">slack</h6>
                         </div>
-                        <div class="card me-3">
-                            <p class="m-0">This is card text</p>
+                        <div class="card me-3 border-white">
+                            <i class="fa-brands fa-google display-1 pb-5"></i>
+                            <h6 class="m-0 text-uppercase text-muted fw-bold">google</h6>
                         </div>
-                        <div class="card me-3">
-                            <p class="m-0">This is card text</p>
+                        <div class="card me-3 border-white">
+                            <i class="fa-brands fa-yahoo display-1 pb-5"></i>
+                            <h6 class="m-0 text-uppercase text-muted fw-bold">yahoo</h6>
                         </div>
-                        <div class="card me-3">
-                            <p class="m-0">This is card text</p>
+                        <div class="card me-3 border-white">
+                            <i class="fa-brands fa-pied-piper-pp display-1 pb-5"></i>
+                            <h6 class="m-0 text-uppercase text-muted fw-bold">pied piper</h6>
                         </div>
-                        <div class="card me-3">
-                            <p class="m-0">This is card text</p>
+                        <div class="card me-3 border-white">
+                            <i class="fa-brands fa-reddit display-1 pb-5"></i>
+                            <h6 class="m-0 text-uppercase text-muted fw-bold">reddit</h6>
+                        </div>
+                        <div class="card me-3 border-white">
+                            <i class="fa-brands fa-drupal display-1 pb-5"></i>
+                            <h6 class="m-0 text-uppercase text-muted fw-bold">drupal</h6>
                         </div>
                     </div>
                 </div>
