change card border to dark

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                             <i class="fa-brands fa-reddit display-1 pb-5"></i>
                             <h6 class="m-0 text-uppercase text-muted fw-bold">reddit</h6>
                         </div>
-                        <div class="card me-3 border-white">
+                        <div class="card me-3 border-dark">
                             <i class="fa-brands fa-drupal display-1 pb-5"></i>
                             <h6 class="m-0 text-uppercase text-muted fw-bold">drupal</h6>
                         </div>
