--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                 <div class="row text-center mb-5">
                     <h2 class="section-title text-uppercase">My skills</h2>
                 </div>
-                <div class="row d-flex g-5 justify-content-center text-center">
-                    <div class="col-12 col-md-6 col-lg-4 px-5">
+                <div class="row d-flex justify-content-center text-center">
+                    <div class="col-12 col-md-6 col-lg-4 p-3">
                         <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
                             <img src="/img/logo-html5.png" class="card-img-top mx-auto my-3"
                                 alt="pomarańczowe logo html5">
@@ -144,7 +144,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 px-5">
+                    <div class="col-12 col-md-6 col-lg-4 p-3">
                         <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
                             <img src="/img/logo-css3.png" class="card-img-top mx-auto my-3" alt="niebieskie logo css3">
                             <div class="card-body d-flex justify-content-center">
@@ -159,8 +159,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row d-flex g-5 mt-1 justify-content-center text-center">
-                    <div class="col-12 col-md-6 col-lg-4 px-5">
+                <div class="row d-flex justify-content-center text-center">
+                    <div class="col-12 col-md-6 col-lg-4 p-3">
                         <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
                             <img src="/img/logo-java.png" class="card-img-top mx-auto my-3" alt="białe logo JAVA">
                             <div class="card-body d-flex justify-content-center">
@@ -173,7 +173,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 px-5">
+                    <div class="col-12 col-md-6 col-lg-4 p-3">
                         <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
                             <img src="/img/logo-js.png" class="card-img-top mx-auto my-3"
                                 alt="żółte logo javascript"></img>
