--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <div class="hero-shadow"></div>
                 <div class="hero-content">
                     <div class="container text-uppercase">
-                        <h1 class="text-center text-info" data-aos="fade-down-right" data-aos-duration="800"
-                            data-aos-easing="ease-in-out">
+                        <h1 class="display-1 text-center text-info fw-bold" data-aos="fade-down-right"
+                            data-aos-duration="800" data-aos-easing="ease-in-out">
                             Karol<span></span>
                             <span class="text-white">Tylenda</span>
                         </h1>
@@ -95,7 +95,8 @@
                         <div class="col-md-8 d-flex align-items-center ps-md-3 ps-lg-5">
                             <div class="card-body">
                                 <p class="text-secondary text-uppercase">Hello everybody, I'm</p>
-                                <h2 class="display-5 text-dark text-uppercase fw-bold">John Malkovich
+                                <h2 class="display-5 text-dark text-uppercase fw-bold">Karol
+                                    Tylenda
                                 </h2>
                                 <p class="text-secondary mb-5"><small>Junior Java Developer</small></p>
                                 <p class="text-secondary mb-5"><small>Programming enthusiast with passionate for
@@ -130,7 +131,8 @@
                 </div>
                 <div class="row d-flex justify-content-center text-center">
                     <div class="col-12 col-md-6 col-lg-4 p-3">
-                        <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
+                        <div class="card rounded-0 border border-dark border-1 text-light bg-dark" data-aos="fade-up"
+                            data-aos-duration="800">
                             <img src="/img/logo-html5.png" class="card-img-top mx-auto my-3"
                                 alt="pomarańczowe logo html5">
                             <div class="card-body d-flex justify-content-center">
@@ -145,7 +147,8 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 p-3">
-                        <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
+                        <div class="card rounded-0 border border-dark border-1 text-light bg-dark" data-aos="fade-up"
+                            data-aos-duration="800">
                             <img src="/img/logo-css3.png" class="card-img-top mx-auto my-3" alt="niebieskie logo css3">
                             <div class="card-body d-flex justify-content-center">
                                 <h5 class="fs-3 card-title mb-3">CSS</h5>
@@ -161,7 +164,8 @@
                 </div>
                 <div class="row d-flex justify-content-center text-center">
                     <div class="col-12 col-md-6 col-lg-4 p-3">
-                        <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
+                        <div class="card rounded-0 border border-dark border-1 text-light bg-dark" data-aos="fade-up"
+                            data-aos-duration="800">
                             <img src="/img/logo-java.png" class="card-img-top mx-auto my-3" alt="białe logo JAVA">
                             <div class="card-body d-flex justify-content-center">
                                 <h5 class="fs-3 card-title mb-3">JAVA</h5>
@@ -174,7 +178,8 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 p-3">
-                        <div class="card rounded-0 text-light bg-dark" data-aos="fade-up" data-aos-duration="800">
+                        <div class="card rounded-0 border border-dark border-1 text-light bg-dark" data-aos="fade-up"
+                            data-aos-duration="800">
                             <img src="/img/logo-js.png" class="card-img-top mx-auto my-3"
                                 alt="żółte logo javascript"></img>
                             <div class="card-body d-flex justify-content-center">
@@ -248,7 +253,7 @@
                 </div>
 
                 <div class="row">
-                    <h4 class="text-uppercase py-5 px-4 ">Trusted partners:</h4>
+                    <h4 class="text-uppercase py-5 px-4 fs-2 fw-bolder">Trusted partners:</h4>
                     <div class="card-carousel ps-4">
                         <div class="card me-3 border-dark">
                             <i class="fa-brands fa-wordpress display-1 pb-5"></i>
