--- a/projects/vintage-radio/index.html
+++ b/projects/vintage-radio/index.html
@@ -24,7 +24,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Roboto+Condensed:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 
     <title>Vintage Radio</title>
 </head>
