--- a/projects/vintage-radio/index.html
+++ b/projects/vintage-radio/index.html
@@ -35,7 +35,8 @@
     </div>
 
     <div class="menu-buttons-container">
-        <button class="btn rounded slide-in-blurred-right" id="user-btn"><i class="fa-solid fa-user"></i></button>
+        <a href="./login.html" class="btn rounded slide-in-blurred-right" id="user-btn"><i
+                class="fa-solid fa-user"></i></a>
         <button class="btn rounded d-lg-none slide-in-blurred-right" id="menu-btn" data-bs-toggle="collapse"
             data-bs-target="#menu-collapse" aria-expanded="false" aria-controls="menu-collapse"><i
                 class="fa-solid fa-bars"></i></button>
