--- a/index.html
+++ b/index.html
@@ -1,318 +1,9 @@
 <!DOCTYPE html>
-<html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-    <title>KT_DEV Portfolio Website</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-    <script src="https://kit.fontawesome.com/37ef35aa2e.js" crossorigin="anonymous"></script>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap"
-        rel="stylesheet">
-
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-
-<body class="bg-black">
-    <nav class="navbar bg-black position-sticky">
-        <div class="container">
-            <a class="navbar-brand" href="#">KT_DEV</a>
-            <button class="d-md-none" type="button" id="navbarBtn">
-                <div class="nav-icon">
-                    <div></div>
-                </div>
-            </button>
-
-            <ul class="nav-list d-none d-md-flex">
-                <li><a href="#home"><span>Home</span></a></li>
-                <li><a href="#about"><span>About</span></a></li>
-                <li><a href="#skills"><span>Skills</span></a></li>
-                <li><a href="#portfolio"><span>Portfolio</span></a></li>
-                <li><a href="#"><span>Contact</span></a></li>
-            </ul>
-
-        </div>
-        <ul class="nav-list-mobile">
-            <li class="nav-mobile-item"><a href="#home"><span>Home</span></a></li>
-            <li class="nav-mobile-item"><a href="#about"><span>About</span></a></li>
-            <li class="nav-mobile-item"><a href="#skills"><span>Skills</span></a></li>
-            <li class="nav-mobile-item"><a href="#portfolio"><span>Portfolio</span></a></li>
-            <li class="nav-mobile-item"><a href="#"><span>Contact</span></a></li>
-        </ul>
-
-    </nav>
-
-    <main>
-
-        <section id="home">
-            <div class="hero-img">
-                <div class="hero-shadow"></div>
-                <div class="hero-content">
-                    <div class="container text-uppercase">
-                        <h1 class="display-1 text-center text-info fw-bold" data-aos="fade-down-right"
-                            data-aos-duration="800" data-aos-easing="ease-in-out">
-                            Karol<span></span>
-                            <span class="text-white">Tylenda</span>
-                        </h1>
-                        <h5 class="fw-bold text-center" data-aos="fade-up-left" data-aos-duration="800"
-                            data-aos-easing="ease-in-out">Junior java
-                            developer</h5>
-
-                    </div>
-                </div>
-                <div class="hero-chevron text-center w-100 display-6">
-                    <a href="#about"><i class="fa-solid fa-chevron-down heartbeat" id="chevron-down"></i></a>
-                </div>
-            </div>
-        </section>
-
-        <section id="about">
-            <div class="container py-5 px-4">
-                <div class="row text-center mb-5">
-                    <h2 class="section-title text-uppercase text-dark">about me</h2>
-                </div>
-                <div class="card shadow border-0" data-aos="fade-up" data-aos-duration="800"
-                    data-aos-easing="ease-in-out">
-                    <div class="row g-0">
-                        <div class="col-md-4 p-3">
-                            <img src="/img/pexels-jeswin-thomas-1549004-HD.jpg" class="img-fluid rounded" alt="...">
-                        </div>
-                        <div class="col-md-8 d-flex align-items-center ps-md-3 ps-lg-5">
-                            <div class="card-body">
-                                <p class="text-secondary text-uppercase">Hello everybody, I'm</p>
-                                <h2 class="display-5 text-dark text-uppercase fw-bold">Karol
-                                    Tylenda
-                                </h2>
-                                <p class="text-secondary mb-5"><small>Junior Java Developer</small></p>
-                                <p class="text-secondary mb-5"><small>Programming enthusiast with passionate for
-                                        hardware and great professional experience. My first programming experiences
-                                        were in DELPHI, C++, C#. For over a year I've focused on JAVA language. I've
-                                        completed JAVA Enterprise Edition course and now I'm improving my skills in
-                                        SPRING Framework. I learn fast and I do my job responsibly, I always pursue my
-                                        goal. I work as a team.</small></p>
-                                <p><i class="fa-solid fa-calendar-days me-3 p-2 text-bg-warning rounded text-light"></i>
-                                    <span class="text-secondary"><small>1st January, 1989</small></span>
-                                </p>
-                                <p><i class="fa-solid fa-phone-volume me-3 p-2 text-bg-warning rounded text-light"></i>
-                                    <span class="text-secondary"><small>+48 600 700 800</small></span>
-                                </p>
-                                <p><i class="fa-solid fa-envelope me-3 p-2 text-bg-warning rounded text-light"></i>
-                                    <span class="text-secondary"><small>demo@demo-mail.com</small></span>
-                                </p>
-                                <p><i class="fa-solid fa-home-user me-3 p-2 text-bg-warning rounded text-light"></i>
-                                    <span class="text-secondary"><small>Warsaw, Poland</small></span>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <seection id="skills" class="bg-black">
-            <div class="container py-5">
-                <div class="row text-center mb-5">
-                    <h2 class="section-title text-uppercase">My skills</h2>
-                </div>
-                <div class="row d-flex justify-content-center text-center">
-                    <div class="col-12 col-md-6 col-lg-4 p-3">
-                        <div class="card rounded-0 border border-dark border-1 text-light bg-dark" data-aos="fade-up"
-                            data-aos-duration="800">
-                            <img src="/img/logo-html5.png" class="card-img-top mx-auto my-3"
-                                alt="pomarańczowe logo html5">
-                            <div class="card-body d-flex justify-content-center">
-                                <h5 class="fs-3 card-title mb-3">HTML</h5>
-                                <div class="card-body-content">
-                                    <p class="text-muted px-3 pt-4"><small>The HyperText Markup Language or HTML
-                                            is the
-                                            standard markup language for documents designed to be displayed in a web
-                                            browser. </small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 p-3">
-                        <div class="card rounded-0 border border-dark border-1 text-light bg-dark" data-aos="fade-up"
-                            data-aos-duration="800">
-                            <img src="/img/logo-css3.png" class="card-img-top mx-auto my-3" alt="niebieskie logo css3">
-                            <div class="card-body d-flex justify-content-center">
-                                <h5 class="fs-3 card-title mb-3">CSS</h5>
-                                <div class="card-body-content">
-                                    <p class="text-muted px-3 pt-4"><small>Cascading Style Sheets (CSS) is a
-                                            style sheet
-                                            language used for describing the presentation of a document written in a
-                                            markup language such as HTML or XML.</small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row d-flex justify-content-center text-center">
-                    <div class="col-12 col-md-6 col-lg-4 p-3">
-                        <div class="card rounded-0 border border-dark border-1 text-light bg-dark" data-aos="fade-up"
-                            data-aos-duration="800">
-                            <img src="/img/logo-java.png" class="card-img-top mx-auto my-3" alt="białe logo JAVA">
-                            <div class="card-body d-flex justify-content-center">
-                                <h5 class="fs-3 card-title mb-3">JAVA</h5>
-                                <div class="card-body-content">
-                                    <p class="text-muted px-3 pt-4"><small>Java is a high-level, class-based,
-                                            object-oriented programming language that is designed to have as few
-                                            implementation dependencies as possible.</small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 p-3">
-                        <div class="card rounded-0 border border-dark border-1 text-light bg-dark" data-aos="fade-up"
-                            data-aos-duration="800">
-                            <img src="/img/logo-js.png" class="card-img-top mx-auto my-3"
-                                alt="żółte logo javascript"></img>
-                            <div class="card-body d-flex justify-content-center">
-                                <h5 class="fs-3 card-title mb-3">JavaScript</h5>
-                                <div class="card-body-content">
-                                    <p class="text-muted px-3 pt-4"><small>JavaScript, often abbreviated as JS, is a
-                                            programming language that is one of the core technologies of the World Wide
-                                            Web, alongside HTML and CSS.</small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </seection>
-
-        <section class="py-5 px-3 bg-dark" id="portfolio">
-            <div class="row text-center pb-5">
-                <h2 class="section-title text-uppercase">My projects </h2>
-            </div>
-            <div class="container rounded-3 bg-black py-5">
-                <div class="row">
-                    <div class="col-12 col-lg-5 order-2 order-lg-1 py-5 px-3">
-                        <div class="hero-img">
-                            <div class="hero-shadow"></div>
-                        </div>
-                    </div>
-                    <div class="col order-1 order-lg-2 py-3 p-lg-5 px-4" data-aos="fade-up" data-aos-duration="800">
-                        <div class="row border-bottom border-dark border-2 mb-5" data-aos="fade-up"
-                            data-aos-duration="800">
-                            <div class="col-2"><span class="fs-3">01</span></div>
-                            <div class="col-10">
-                                <p class="text-muted"><small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        Accusamus,
-                                        eum.
-                                        Exercitationem, est. Veniam dolores quod, autem quo eum repellat fuga!</small>
-                                </p>
-                                <div class="row p-3">
-                                    <button class="btn btn-outline-info">See more</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row border-bottom border-dark border-2 mb-5" data-aos="fade-up"
-                            data-aos-duration="800">
-                            <div class="col-2"><span class="fs-3">02</span></div>
-                            <div class="col-10">
-                                <p class="text-muted"><small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        Accusamus,
-                                        eum.
-                                        Exercitationem, est. Veniam dolores quod, autem quo eum repellat fuga!</small>
-                                </p>
-                                <div class="row p-3">
-                                    <button class="btn btn-outline-info">See more</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row" data-aos="fade-up" data-aos-duration="800">
-                            <div class="col-2"><span class="fs-3">03</span></div>
-                            <div class="col-10">
-                                <p class="text-muted"><small>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                        Accusamus,
-                                        eum.
-                                        Exercitationem, est. Veniam dolores quod, autem quo eum repellat
-                                        fuga!</small></p>
-                                <div class="row p-3">
-                                    <button class="btn btn-outline-info">See more</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <h4 class="text-uppercase py-5 px-4 fs-2 fw-bolder">Trusted partners:</h4>
-                    <div class="card-carousel ps-4">
-                        <div class="card me-3 border-dark">
-                            <i class="fa-brands fa-wordpress display-1 pb-5"></i>
-                            <h6 class="m-0 text-uppercase text-muted fw-bold">wordpress</h6>
-                        </div>
-                        <div class="card me-3 border-dark">
-                            <i class="fa-brands fa-slack display-1 pb-5"></i>
-                            <h6 class="m-0 text-uppercase text-muted fw-bold">slack</h6>
-                        </div>
-                        <div class="card me-3 border-dark">
-                            <i class="fa-brands fa-google display-1 pb-5"></i>
-                            <h6 class="m-0 text-uppercase text-muted fw-bold">google</h6>
-                        </div>
-                        <div class="card me-3 border-dark">
-                            <i class="fa-brands fa-yahoo display-1 pb-5"></i>
-                            <h6 class="m-0 text-uppercase text-muted fw-bold">yahoo</h6>
-                        </div>
-                        <div class="card me-3 border-dark">
-                            <i class="fa-brands fa-pied-piper-pp display-1 pb-5"></i>
-                            <h6 class="m-0 text-uppercase text-muted fw-bold">pied piper</h6>
-                        </div>
-                        <div class="card me-3 border-dark">
-                            <i class="fa-brands fa-reddit display-1 pb-5"></i>
-                            <h6 class="m-0 text-uppercase text-muted fw-bold">reddit</h6>
-                        </div>
-                        <div class="card me-3 border-dark">
-                            <i class="fa-brands fa-drupal display-1 pb-5"></i>
-                            <h6 class="m-0 text-uppercase text-muted fw-bold">drupal</h6>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </section>
-
-    </main>
-
-    <footer>
-        <div class="container text-center py-3">
-            <div class="d-flex justify-content-center fs-4 py-3 social-media">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            </div>
-            <p class="m-0 pb-3">&copy;Copyright, All rights reserved.</p>
-        </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
-    <script src="./js/main.js"></script>
-    <script src="./js/aos.js"></script>
-    <script src="./js/slick.js"></script>
-</body>
-
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>PixelPrintShop</title>
+    </head>
+    <body></body>
 </html>
