--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                 <div class="navbar-end is-uppercase">
                     <a href="#" class="navbar-item">Home</a>
                     <a href="#" class="navbar-item">About</a>
-                    <a href="#" class="navbar-item">Services</a>
+                    <a href="#servicesSection" class="navbar-item">Services</a>
                     <a href="#" class="navbar-item">Offer</a>
                     <a href="#" class="navbar-item">Contact</a>
                 </div>
             </div>
         </nav>
 
-        <section class="hero is-fullheight">
+        <!-- <section class="hero is-fullheight" id="heroSection">
             <div class="hero-body is-flex-direction-column is-flex-grow-0 my-auto">
                 <div class="container has-text-centered">
                     <h1 class="bytesized-regular tracking-in-expand"><span class="has-text-link">Pixel</span><span class="has-text-link">Print</span><span class="has-text-primary">Shop</span></h1>
@@ -50,6 +50,67 @@
                     <div class="has-text-weight-bold is-size-4">
                         <p class="my-0">under</p>
                         <p class="my-0">construction</p>
+                    </div>
+                </div>
+            </div>
+        </section> -->
+
+        <section class="section has-background-link" id="servicesSection">
+            <div class="container is-fullhd">
+                <div class="card-container">
+                    <div class="card">
+                        <div class="card-content">
+                            <i class="fa-solid fa-screwdriver-wrench has-text-link"></i>
+                            <h4 class="is-size-4 has-text-centered is-uppercase has-text-weight-bold has-text-link">Service</h4>
+                            <div class="content is-small">
+                                <p class="has-text-centered mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, alias!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <i class="fa-solid fa-screwdriver-wrench has-text-link"></i>
+                            <h4 class="is-size-4 has-text-centered is-uppercase has-text-weight-bold has-text-link">Service</h4>
+                            <div class="content is-small">
+                                <p class="has-text-centered mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, alias!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <i class="fa-solid fa-screwdriver-wrench has-text-link"></i>
+                            <h4 class="is-size-4 has-text-centered is-uppercase has-text-weight-bold has-text-link">Service</h4>
+                            <div class="content is-small">
+                                <p class="has-text-centered mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, alias!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <i class="fa-solid fa-screwdriver-wrench has-text-link"></i>
+                            <h4 class="is-size-4 has-text-centered is-uppercase has-text-weight-bold has-text-link">Service</h4>
+                            <div class="content is-small">
+                                <p class="has-text-centered mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, alias!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <i class="fa-solid fa-screwdriver-wrench has-text-link"></i>
+                            <h4 class="is-size-4 has-text-centered is-uppercase has-text-weight-bold has-text-link">Service</h4>
+                            <div class="content is-small">
+                                <p class="has-text-centered mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, alias!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <i class="fa-solid fa-screwdriver-wrench has-text-link"></i>
+                            <h4 class="is-size-4 has-text-centered is-uppercase has-text-weight-bold has-text-link">Service</h4>
+                            <div class="content is-small">
+                                <p class="has-text-centered mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, alias!</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
