--- a/projects/pixelprintshop/index.html
+++ b/projects/pixelprintshop/index.html
@@ -12,7 +12,10 @@
     <body>
         <nav class="navbar">
             <div class="container navbar__container">
-                <a href="#" class="navbar__logo">Pixel<span>Print</span>Shop</a>
+                <a href="#" class="brand-logo">
+                    <div class="brand-logo__main">P<span class="i-square">i</span>xel Print</div>
+                    <div class="brand-logo__sub">Shop</div>
+                </a>
 
                 <ul class="navbar__links">
                     <li><a href="#wynajem">Wynajem</a></li>
@@ -192,7 +195,10 @@
             <div class="container">
                 <div class="footer__grid">
                     <div class="footer__brand">
-                        <div class="logo">Pixel<span>Print</span>Shop</div>
+                        <div class="brand-logo">
+                            <div class="brand-logo__main">P<span class="i-square">i</span>xel Print</div>
+                            <div class="brand-logo__sub">Shop</div>
+                        </div>
                         <p>Twoje centrum nowoczesnego druku w Suwałkach. 20 lat doświadczenia, tysiące wydruków, zero kompromisów.</p>
                     </div>
 
